--- a/RASD/main.tex
+++ b/RASD/main.tex
@@ -1,32 +1,32 @@
-\documentclass{paper}
+\documentclass[a4paper]{article}
 \usepackage[utf8]{inputenc}
 \usepackage{biblatex}
+\usepackage{graphicx}
 \usepackage{acronym}
 \usepackage{indentfirst}
-
-\title{\textbf{Requirement Analysis and\\ Specification Document}}
-\subtitle{\textit{Software Engineering 2 Project}}
-\author{Davide Rutigliano, Davide Matta, Claudio Ferrante}
 \addbibresource{references.bib}
 
 \begin{document}
-\maketitle
+\include{frontpage}
 \tableofcontents
+\newpage
+\listoffigures
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \newpage
 \section{Introduction}
 
     \subsection{Purpose}
     
-    \subsection{Scope}
+    \subsection{Scope and Audience}
+        \subsubsection{Description of the problem}
+        
+        \subsubsection{Description of the system}
+        
+        \subsubsection{Goals}
     
-    \subsection{Revision History}
+    \subsection{Document Overview}
     
-    \subsection{Reference Documents}
-    
-    \subsection{Document Structure}
-    
-        \subsection{Definition of Terms}
+    \subsection{Definition of Terms}
     
         \subsubsection{Definitions}
 
@@ -89,14 +89,20 @@
         
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \newpage
-\section{Formal Analysis Using Alloy}
+\section{Formal Analysis using Alloy}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \newpage
 \section{Effort Spent}
+    \begin{itemize}
+        \item[-] \textbf{Davide Rutigliano:}
+        
+        \item[-] \textbf{Davide Matta:}
+        
+        \item[-] \textbf{Claudio Ferrante:}
+    \end{itemize}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\newpage
 \section{References}
 %    \printbibliography
 
