--- a/RASD/references.bib
+++ b/RASD/references.bib
@@ -1,3 +1,9 @@
+@book{rumbaugh2004unified,
+  title={Unified Modeling Language Reference Manual, the},
+  author={Rumbaugh, James and Jacobson, Ivar and Booch, Grady},
+  year={2004},
+  publisher={Pearson Higher Education}
+}
 @book{jackson2006software,
   title={Software abstractions},
   author={Jackson, Daniel},
@@ -5,7 +11,6 @@
   year={2006},
   publisher={MIT press Cambridge}
 }
-
 @article{bradner1997key,
   title={Key words for use in RFCs to Indicate Requirement Levels},
   author={Bradner, Scott},
